align center for documentation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+  <head>
+  	<link href="a.css" rel="stylesheet" />
+  </head>
   <body>
-    <h1>Koara</h1>
+    <div id="bd">
+    	<h1>Koara</h1>
+    </div>
   </body>
 </html>
