--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <body>
     <div id="bd">
     	<h1>Koara</h1>
+    	
+    	<p><a href="https://en.wikipedia.org/wiki/Lightweight_markup_language">Lightweight markup languages</a> are typically all-or-nothing, but most 
+    	use cases require only a subset of the language. This leads to numerous forks and flavors and ultimately confuses the end-user. Koara is a modular 
+    	lightweight markup language (based on a <a href="grammar.html">formal grammar</a>) where every part of the syntax can be enabled/disabled. If the syntax is disabled, it will 
+    	just render as plain text.</p>
+    	
     </div>
   </body>
 </html>
