--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Koara</title>
+    <link rel="stylesheet" href="a.css">
   </head>
   <body>
-    <p><img src="logo.png"></p>
+      <div id="hd">
+        <a href="#">
+          <img src="logo.png" />
+        </a>
+        <ul id="nv">
+          <li><a href="#">DOCS</a></li>
+          <li><a href="#">GRAMMAR</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a class="cta" href="#">DEMO</a></li>
+        </ul>
+      </div>
+      <div id="bd">
+        <h1>What is Koara?</h1>
+      </div>
   </body>
 </html>
