first website release

--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Koara</title>
-    <link rel="stylesheet" href="a.css">
-  </head>
-  <body>
-      <div id="hd">
-        <a href="#">
-          <img src="logo.png" />
-        </a>
-        <ul id="nv">
-          <li><a href="#">DOCS</a></li>
-          <li><a href="#">GRAMMAR</a></li>
-          <li><a href="#">PROJECTS</a></li>
-          <li><a class="cta" href="#">DEMO</a></li>
-        </ul>
-      </div>
-      <div id="bd">
-        <h1>What is Koara?</h1>
-      </div>
-  </body>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    	<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="author" content="Andy Van Den Heuvel">
+		<title>Koara - A Modular Lightweight Markup Language</title>
+		<link rel="stylesheet" type="text/css" href="a.css" media="all">
+	</head>
+  	<body>
+    	<div id="wr">
+    		<p><a href="/"><img src="logo.png" alt="Koara" /></a></p>
+
+			<ul id="nv">
+			  <li>Currently v0.7.0</li>
+			  <!--
+			  <li>·</li>
+			  <li><a href="/">Docs</a></li>
+			  <li>·</li>
+			  <li><a href="/grammar.html">Grammar</a></li>
+			  <li>·</li>
+			  <li><a href="/projects.html">Projects</a></li>
+			  <li>·</li>
+			  <li><a href="http://www.github.com/koara">Github</a></li>
+			  -->
+			</ul>
+					
+			<h1>What is Koara?</h1>
+
+<p>Many applications use some sort of <a href="#">lightweight markup language</a> to enhance the writing experience of their users. 
+But not every use case requires the same type of syntax. This has led to many forks and flavors of existing languages.</p>
+
+<p>Koara is a modular lightweight markup language. The application owner can decide which parts of the syntax they want to allow. When a user writes 
+syntax that is not allowed, it will just render as plain text.<p>
+
+<!--
+<ul>
+  <li><a href="#">Paragraphs</a></li>
+</ul>
+
+<h2>Paragraphs</h2>
+<p>A block of text without special meaning, is considered a paragraph. 
+-->
+    	</div>
+	</body>
 </html>
