--- a/_template.html
+++ b/_template.html
@@ -14,16 +14,12 @@
 
 			<ul id="nv">
 			  <li>Currently v0.6.0</li>
-			  <!--
 			  <li>·</li>
-			  <li><a href="/">Docs</a></li>
+			  <li><a href="/docs.html">Docs</a></li>
 			  <li>·</li>
 			  <li><a href="/grammar.html">Grammar</a></li>
 			  <li>·</li>
 			  <li><a href="/projects.html">Projects</a></li>
-			  <li>·</li>
-			  <li><a href="http://www.github.com/koara">Github</a></li>
-			  -->
 			</ul>
 					
 			<%= content %>
