--- a/projects.html
+++ b/projects.html
@@ -13,20 +13,27 @@
     		<p><a href="/"><img src="logo.png" alt="Koara" /></a></p>
 
 			<ul id="nv">
-			  <li>Currently v0.7.0</li>
-			  <!--
+			  <li>Currently v0.6.0</li>
 			  <li>·</li>
-			  <li><a href="/">Docs</a></li>
+			  <li><a href="/docs.html">Docs</a></li>
 			  <li>·</li>
 			  <li><a href="/grammar.html">Grammar</a></li>
 			  <li>·</li>
 			  <li><a href="/projects.html">Projects</a></li>
-			  <li>·</li>
-			  <li><a href="http://www.github.com/koara">Github</a></li>
-			  -->
 			</ul>
 					
-			-PROJECTS
+			<h1>Projects<h1>
+
+<h2>Parsers</h2>
+<ul>
+  <li><a href="http://www.github.com/koara/koara-java">Koara-java</a>: Koara to HTML parser written in Java
+  <li>Koara-php (coming soon)
+</ul>
+
+<h2>Dependency Management</h2>
+<ul>
+  <li><a href="http://search.maven.org/#search%7Cga%7C1%7Ckoara">Maven</a>: Maven repository</li>
+</ul>
     	</div>
 	</body>
 </html>
