--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Andy Van Den Heuvel">
 		<title>Projects - Koara</title>
 		<link rel="stylesheet" type="text/css" href="a.css" media="all">
+		<link rel="shortcut icon" href="favicon.png" />
 	</head>
   	<body>
     	<div id="wr">
