--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Andy Van Den Heuvel">
 		<title>Koara - A Modular Lightweight Markup Language</title>
 		<link rel="stylesheet" type="text/css" href="a.css" media="all">
+		<link rel="shortcut icon" href="favicon.png" />
 	</head>
   	<body>
     	<div id="wr">
