--- a/demo.html
+++ b/demo.html
@@ -11,10 +11,10 @@
 	</head>
   	<body>
     	<div id="wr">
-    		<p><a href="/"><img src="logo.png" alt="Koara" /></a></p>
+    		<p><a href="/"><img src="logo.svg" onerror="this.src='logo.png'; this.onerror=null;"></a></p>
 
 			<ul id="nv">
-			  <li>Currently v0.6.0</li>
+			  <li>Currently v0.7.0</li>
 			  <li>·</li>
 			  <li><a href="/docs.html">Docs</a></li>
 			  <li>·</li>
