--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 	</head>
   	<body>
     	<div id="wr">
-    		<p><a href="/"><img src="logo.svg" onerror="this.src='logo.png'; this.onerror=null;"></a></p>
+    		<p><a href="/"><img src="logo.png"></a></p>
 
 			<ul id="nv">
 			  <li>Currently v0.7.0</li>
@@ -21,6 +21,8 @@
 			  <li><a href="/grammar.html">Grammar</a></li>
 			  <li>·</li>
 			  <li><a href="/projects.html">Projects</a></li>
+			  <li>·</li>
+			  <li><a href="http://try.koara.io" target="blank">Demo</a></li>
 			</ul>
 					
 			<h1>Projects<h1>
