--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Andy Van Den Heuvel">
 		<title>Koara - A Modular Lightweight Markup Language</title>
-		<link rel="stylesheet" type="text/css" href="a.css" media="all">
-		<link rel="shortcut icon" href="favicon.png" />
+		<link rel="stylesheet" type="text/css" href="http://koara.io/a.css" media="all">
+		<link rel="shortcut icon" href="http://koara.io/favicon.png" />
 	</head>
   	<body>
     	<div id="wr">
-    		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
+    		<p><a href="http://www.koara.io"><img src="http://koara.io/logo.png" alt="Koara" /></a></p>
 
 			<ul class="nv">
 			  <li>Currently v0.7.0</li>
