--- a/_template.html
+++ b/_template.html
@@ -16,11 +16,11 @@
 			<ul class="nv">
 			  <li>Currently v0.7.0</li>
 			  <li>·</li>
-			  <li><a href="/docs.html">Docs</a></li>
+			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
-			  <li><a href="/grammar.html">Grammar</a></li>
+			  <li><a href="/grammar">Grammar</a></li>
 			  <li>·</li>
-			  <li><a href="/projects.html">Projects</a></li>
+			  <li><a href="/projects">Projects</a></li>
 			  <li>·</li>
 			  <li><a href="http://try.koara.io">Demo</a></li>
 			</ul>
