--- a/projects.html
+++ b/projects.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Andy Van Den Heuvel">
 		<title>Projects - Koara</title>
-		<link rel="stylesheet" type="text/css" href="http://koara.io/a.css" media="all">
-		<link rel="shortcut icon" href="http://koara.io/favicon.png" />
+		<link rel="stylesheet" type="text/css" href="a.css" media="all">
+		<link rel="shortcut icon" href="favicon.png" />
 	</head>
   	<body>
     	<div id="wr">
-    		<p><a href="http://www.koara.io"><img src="http://koara.io/logo.png" alt="Koara" /></a></p>
+    		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
 
 			<ul class="nv">
 			  <li>Currently v0.7.0</li>
 			  <li>·</li>
-			  <li><a href="/docs.html">Docs</a></li>
+			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
-			  <li><a href="/grammar.html">Grammar</a></li>
+			  <li><a href="/grammar">Grammar</a></li>
 			  <li>·</li>
-			  <li><a href="/projects.html">Projects</a></li>
+			  <li><a href="/projects">Projects</a></li>
 			  <li>·</li>
 			  <li><a href="http://try.koara.io">Demo</a></li>
 			</ul>
