--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Andy Van Den Heuvel">
-		<title>Koara - A Modular Lightweight Markup Language</title>
+		<title>Koara - A modular lightweight markup language</title>
 		<link rel="stylesheet" type="text/css" href="a.css" media="all">
 		<link rel="shortcut icon" href="favicon.png" />
 	</head>
