--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
 <h2>Dependency Management</h2>
 <ul>
-  <li><a href="http://search.maven.org/#search%7Cga%7C1%7Ckoara">Maven</a>: Maven repository</li>
+  <li><a href="http://search.maven.org/#search%7Cga%7C1%7Ckoara">Maven</a>: Maven dependency</li>
 </ul>
     	</div>
 	</body>
