--- a/docs.html
+++ b/docs.html
@@ -14,7 +14,7 @@
     		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
 
 			<ul class="nv">
-			  <li>Currently v0.7.0</li>
+			  <li>Currently v0.8.0</li>
 			  <li>·</li>
 			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
@@ -81,8 +81,8 @@ Koara uses return-based line breaks.<p>
 
 &lt;<span class="pl-ent">p</span>&gt;= A heading can be escaped like this.&lt;/<span class="pl-ent">p</span>&gt;</pre>
 
-<p>If enabled and a line starts with equal signs, it is considered a heading. The maximum heading level is 6. Whitespace or blank lines are always optional in koara.<p>
-<p><strong>Escaping:</strong> If you don't want koara to parse a line as a heading, you can escape the equal sign by prepending a backslash. You can also escape 
+<p>If enabled and a line starts with equal signs, it is considered a heading. The largest heading level is 6. Whitespace or blank lines are always optional in koara.<p>
+<p><strong>Escaping:</strong> If you don't want koara to parse a line as a heading, escape the equal sign by prepending a backslash. You can also escape 
 all other characters used in the syntax.
 
 <h2 id="lists">Lists</h2>
