--- a/docs.html
+++ b/docs.html
@@ -81,8 +81,8 @@ Koara uses return-based line breaks.<p>
 
 &lt;<span class="pl-ent">p</span>&gt;= A heading can be escaped like this.&lt;/<span class="pl-ent">p</span>&gt;</pre>
 
-<p>If enabled and a line starts with equal signs, it is considered a heading. The largest heading level is 6. Whitespace or blank lines are always optional in koara.<p>
-<p><strong>Escaping:</strong> If you don't want koara to parse a line as a heading, escape the equal sign by prepending a backslash. You can also escape 
+<p>If enabled and a line starts with equal signs, it is considered a heading. The largest heading level is 6. Whitespace or blank lines are always optional in Koara.<p>
+<p><strong>Escaping:</strong> If you don't want Koara to parse a line as a heading, escape the equal sign by prepending a backslash. You can also escape 
 all other characters used in the syntax.
 
 <h2 id="lists">Lists</h2>
@@ -121,7 +121,7 @@ all other characters used in the syntax.
 &lt;/<span class="pl-ent">ol</span>&gt;</pre>
 
 <p>Unordered lists start with a dash before the item. Ordered lists start with a digit, followed by a dot. 
-You can use any digit, koara will preserve the numbering when parsed.</p>
+You can use any digit, Koara will preserve the numbering when parsed.</p>
 
 <p>To create sublist-items you have to use indentation. Default indentation is 2 spaces or a tab.
 List items can consist of multiple block elements. Because these can contain blank lines, you have to use at least 2 blank lines to break out of the list or start a new block without indentation.</p>
