--- a/grammar.html
+++ b/grammar.html
@@ -25,7 +25,7 @@
 			  <li><a href="http://try.koara.io">Demo</a></li>
 			</ul>
 					
-			<h1>BNF for koara</h1>
+			<h1>BNF for Koara</h1>
 
 <h2>TOKENS</h2>
 <pre><code>&lt;DEFAULT&gt; TOKEN : {
