--- a/grammar.html
+++ b/grammar.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,7 +13,7 @@
   	<body>
     	<div id="wr">
     		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
-
+            
 			<ul class="nv">
 			  <li>Currently v0.8.0</li>
 			  <li>·</li>
