--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
             
 			<ul class="nv">
-			  <li>Currently v0.8.0</li>
+			  <li>Currently v0.9.0</li>
 			  <li>·</li>
 			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
@@ -30,13 +30,15 @@
 
 <h2>Parsers</h2>
 <ul>
-  <li><a href="http://www.github.com/koara/koara-java">Koara-java</a>: Koara to HTML parser written in Java
-  <li>Koara-php (coming soon)
+  <li><a href="http://www.github.com/koara/koara-java">Koara-java</a>: Koara parser written in Java
+  <li><a href="http://www.github.com/koara/koara-php">Koara-php</a>: Koara parser written in PHP
+  <li>Koara-js (coming soon)</li>
 </ul>
 
 <h2>Dependency Management</h2>
 <ul>
-  <li><a href="http://search.maven.org/#search%7Cga%7C1%7Ckoara">Maven</a>: Maven dependency</li>
+  <li><a href="https://packagist.org/packages/koara/koara">Composer</a></li>
+  <li><a href="http://search.maven.org/#search%7Cga%7C1%7Ckoara">Maven</a></li>
 </ul>
     	</div>
 	</body>
