--- a/_template.html
+++ b/_template.html
@@ -15,7 +15,7 @@
     		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
             
 			<ul class="nv">
-			  <li>Currently v0.9.0</li>
+			  <li>Currently v0.10.0</li>
 			  <li>·</li>
 			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
@@ -23,7 +23,7 @@
 			  <li>·</li>
 			  <li><a href="/projects">Projects</a></li>
 			  <li>·</li>
-			  <li><a href="http://try.koara.io">Demo</a></li>
+			  <li><a href="/demo">Demo</a></li>
 			</ul>
 					
 			<%= content %>
