--- a/new/index.html
+++ b/new/index.html
@@ -17,24 +17,47 @@
 
     <h1>What is Koara?</h1>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>When building an application, you can use a <a href="https://en.wikipedia.org/wiki/Lightweight_markup_language" target="_blank">lightweight markup language</a> to enhance the user's writing experience.
+       But these languages are inflexible. You either allow all the syntax or nothing.
+       This is not always appropriate, so most developers end up with a custom language or a fork of an existing language. It requires the user to
+       each time learn a different language and jeopardizes portability between applications.</p>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui..</p>
+    <p>Koara is a modular lightweight markup language. The developer decides which parts of the syntax (modules) are
+       allowed to be parsed. The rest will render as plain text. Koara comes with a <a href="http://www.github.com/koara/grammar" target="_blank">formal grammar</a>
+       and a <a href="http://www.github.com/koara/testsuite" target="_blank">compliancy testsuite</a>.</p>
 
     <h1>Modules</h1>
 
+    <h2>Paragarphs</h2>
+    <p>If enabled, any default block element will become a paragraph. Paragraphs are separated by one or more blank lines. Koara uses return-based line breaks.</p>
 
-    <h2>Module 1</h2>
+    <h2>Headings</h2>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui..</p>
+    <p>If enabled and a line starts with equal signs, it is considered a heading. The largest heading level is 6. Whitespace or blank lines are always optional in Koara.<br>
+       If you don't want Koara to parse a line as a heading, escape the equal sign by prepending a backslash. You can also escape all other characters used in the syntax.</p>
 
-    <h2>Module 2</h2>
+    <h2>Lists</h2>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui..</p>
+    <p>Unordered lists start with a dash before the item. Ordered lists start with a digit, followed by a dot. You can use any digit, Koara will preserve the numbering when parsed.</p>
+    <p>To create sublist-items you have to use indentation. Default indentation is 2 spaces or a tab. List items can consist of multiple block elements. Because these can contain blank lines, you have to use at least 2 blank lines to break out of the list or start a new block without indentation.</p>
 
-    <h2>Module 3</h2>
+    <h2>Links</h2>
+    <p>Koara supports internal and inline links. Internal links are useful for wiki and CMS applications. By default it returns an empty link because the url should be resolved by the application.</p>
+    <p>Inline links are simply a combination of the link text and the url.</p>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui..</p>
+    <h2>Images</h2>
+    <p>Images work exactly the same as links except they have an image: label. Images and links are both resources. If you configure the parser to allow links but not images, the syntax will give you a natural fallback: Images will then become links with a prefix image: in the title.</p>
+
+    <h2>Formatting</h2>
+
+    <p>If enabled, text between asterisks will be rendered as bold text, text between underscores will be rendered as italic text. Formatting can span over multiple lines, and intraword emphasis is allowed.</p>
+
+    <h2>Blockquotes</h2>
+    <p>If enabled, you can use email-style blockquoting. Blockquotes can also be nested.</p>
+
+    <h2>Code</h2>
+    <p>If enabled, text between backticks will be rendered as code text. It can span over multiple lines.</p>
+    <p>Koara also support fenced code blocks. A fenced code block starts at the beginning of a line with at least 3 backticks. It can contain an optional 'language' identifier.</p>
 
 </div>
 
