update website to 0.13.0

--- a/docs.html
+++ b/docs.html
@@ -15,7 +15,7 @@
     		<p><a href="http://www.koara.io"><img src="logo.png" alt="Koara" /></a></p>
             
 			<ul class="nv">
-			  <li>Currently v0.12.0</li>
+			  <li>Currently v0.13.0</li>
 			  <li>·</li>
 			  <li><a href="/docs">Docs</a></li>
 			  <li>·</li>
@@ -43,8 +43,8 @@
 <p><em>Koara:</em></p>
 <pre><code>This is a simple paragraph.
 
-Use the return key for lines
-that need a break.
+If you want to create a line break,
+end a line with two or more spaces
 </code></pre>
 
 <p><em>HTML:</em></p>
